--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -2,6 +2,13 @@
     @return #{$pxval / $base}em;
 }
 
+// On reset titre par défaut mis par foundation
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+    line-height: normal;
+    font-weight: normal;
+    margin:0;
+}
+
 body {
-    
+    background: #f8f0d1 url(images/main.png) top center;
 }
