--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -10,5 +10,5 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 }
 
 body {
-    background: #f8f0d1 url(images/main.png) top center;
+    background: #f8f0d1 url(images/main.png) no-repeat top center;
 }
