--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -12,3 +12,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 body {
     background: #f8f0d1 url(images/main.png) no-repeat top center;
 }
+
+#page {
+    width: 980px;
+}
