--- a/squelettes/perso.css
+++ b/squelettes/perso.css
@@ -1,3 +1,38 @@
+@font-face {
+  font-family: 'PaperJohnnyDreiRegular';
+  src: url("fonts/paperjohnnydrei-regular-webfont.eot");
+  src: url("fonts/paperjohnnydrei-regular-webfont.eot?#iefix") format("embedded-opentype"), url("fonts/paperjohnnydrei-regular-webfont.woff") format("woff"), url("fonts/paperjohnnydrei-regular-webfont.ttf") format("truetype"), url("fonts/paperjohnnydrei-regular-webfont.svg#PaperJohnnyDreiRegular") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'PaperJohnnyEinhalbRegular';
+  src: url("fonts/paperjohnnyeinhalb-regular-webfont.eot");
+  src: url("fonts/paperjohnnyeinhalb-regular-webfont.eot?#iefix") format("embedded-opentype"), url("fonts/paperjohnnyeinhalb-regular-webfont.woff") format("woff"), url("fonts/paperjohnnyeinhalb-regular-webfont.ttf") format("truetype"), url("fonts/paperjohnnyeinhalb-regular-webfont.svg#PaperJohnnyEinhalbRegular") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'PaperJohnnyEineinhalbRegular';
+  src: url("fonts/paperjohnnyeineinhalb-regul-webfont.eot");
+  src: url("fonts/paperjohnnyeineinhalb-regul-webfont.eot?#iefix") format("embedded-opentype"), url("fonts/paperjohnnyeineinhalb-regul-webfont.woff") format("woff"), url("fonts/paperjohnnyeineinhalb-regul-webfont.ttf") format("truetype"), url("fonts/paperjohnnyeineinhalb-regul-webfont.svg#PaperJohnnyEineinhalbRegular") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'PaperJohnnyEinsRegular';
+  src: url("fonts/paperjohnnyeins-regular-webfont.eot");
+  src: url("fonts/paperjohnnyeins-regular-webfont.eot?#iefix") format("embedded-opentype"), url("fonts/paperjohnnyeins-regular-webfont.woff") format("woff"), url("fonts/paperjohnnyeins-regular-webfont.ttf") format("truetype"), url("fonts/paperjohnnyeins-regular-webfont.svg#PaperJohnnyEinsRegular") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'PaperJohnnyZweiRegular';
+  src: url("fonts/paperjohnnyzwei-regular-webfont.eot");
+  src: url("fonts/paperjohnnyzwei-regular-webfont.eot?#iefix") format("embedded-opentype"), url("fonts/paperjohnnyzwei-regular-webfont.woff") format("woff"), url("fonts/paperjohnnyzwei-regular-webfont.ttf") format("truetype"), url("fonts/paperjohnnyzwei-regular-webfont.svg#PaperJohnnyZweiRegular") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   line-height: normal;
   font-weight: normal;
@@ -5,3 +40,28 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 body {
   background: #f8f0d1 url(images/main.png) no-repeat top center; }
+
+#page {
+  width: 980px;
+  border: none;
+  margin-top: 0; }
+  #page #entete {
+    border: none;
+    padding: 0;
+    margin: 0; }
+    #page #entete .header_bg {
+      background: transparent url(images/header.png) no-repeat center;
+      width: 773px;
+      height: 180px;
+      position: relative; }
+      #page #entete .header_bg .timbre {
+        background: transparent url(images/timbre.png) no-repeat center;
+        position: absolute;
+        width: 135px;
+        height: 81px;
+        top: 127px;
+        left: 584px; }
+  #page #pied {
+    background: #fcbf00;
+    border: none;
+    border-bottom: 2px solid #d7ccbf; }
