--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -15,6 +15,26 @@ body {
     background: #f8f0d1 url(images/main.png) no-repeat top center;
 }
 
+// On va créer tout un jeu de couleur pour le menu
+.vert {
+    background: #adb451;
+}
+.turquoise {
+    background: #00ada9;
+}
+.rouge {
+    background: #a80231;
+}
+.bleu {
+    background: #6983ab;
+}
+.orange {
+    background: #ee8016;
+}
+.brun {
+    background: #716750;
+}
+
 #page {
     width: 980px;
     border: none;
