Positionnement correct du menu principal.

--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -64,6 +64,13 @@ body {
 
         ul.menu-principal {
             list-style: none;
+            
+            li {
+                color: #FFF;
+                width: 207px;
+                padding-left: 27px;
+                margin-left: -43px;
+            }
         }
     }
 
