Marge entre les li du menu

--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -70,6 +70,7 @@ body {
                 width: 207px;
                 padding-left: 27px;
                 margin-left: -43px;
+                margin-top: 1px;
             }
         }
     }
