On place les éléments de l'info_site.

--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -86,6 +86,14 @@ body {
         }
     }
 
+    #info_site {
+        text-align: center;
+        
+        h2 {
+            text-transform: uppercase;
+        }
+    }
+
     #pied {
         background: #fcbf00;
         border: none;
