On ajoute les styles du titre de l'info_site.

--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -90,6 +90,9 @@ body {
         text-align: center;
         
         h2 {
+            color: #87362b;
+            font-family: helvetica;
+            font-size: pem(16);
             text-transform: uppercase;
         }
     }
