On ajoute la partie age du formulaire. On active aussi Chosen dessus.

--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -3,6 +3,7 @@
 }
 
 @import "fonts";
+@import "form";
 
 // On reset titre par défaut mis par foundation
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
