On place correctement les cadres de la sidebar sommaire

--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -119,7 +119,8 @@ body {
             background: #FFF;
             border-bottom: 2px solid #d7ccbf;
             padding: 10px;
-
+            width: 300px;
+            float: right;
 
             .sub-cadre {
                 background: #f8f0d1;
