On mes une marge sur les explications pour ceux qui n'aurai pas de Javascript

--- a/squelettes/_form.scss
+++ b/squelettes/_form.scss
@@ -16,6 +16,7 @@
     
     .explication {
         background: url(images/aide.png) no-repeat;
+        padding-left: 15px;
     }
 
     fieldset {
