On place un class descriptif pour pouvoir mettre une marge sur le descriptif de l'activité.

--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -158,6 +158,9 @@ body {
                         &.pediode {
                             font-weight: bold;
                         }
+                        &.descriptif {
+                            margin-bottom: 5px;
+                        }
                     }
                 }
             }
