On met une marge entre les cadres.

--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -132,6 +132,7 @@ body {
             background: #FFF;
             border-bottom: 2px solid #d7ccbf;
             padding: 10px;
+            margin-bottom: 10px;
             width: 300px;
             float: right;
 
