On ajoute le lien brochure.

--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -164,6 +164,14 @@ body {
                         }
                     }
                 }
+
+                .borchure {
+                    background: url(images/brochure.png) no-repeat 95% 5%;
+                    .spip_documents {
+                        margin: 0;
+                        padding-top: 10px;
+                    }
+                }
             }
         }
 
