Ajoute la couleur de fond du texte des articles.

--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -141,6 +141,10 @@ body {
                 height: 30px;
                 padding-left: 40px;
             }
+
+            .texte-principal {
+                background: #FFF;
+            }
         }
 
         #sidebar {
