--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -130,6 +130,8 @@ body {
         overflow: visible;
         
         #contenu-principal {
+            padding-left: 20px;
+            
             h1 {
                 display: table-cell;
                 vertical-align: middle;
@@ -144,6 +146,9 @@ body {
 
             .texte-principal {
                 background: #FFF;
+                width: 680px;
+                border-top: 2px solid #9c9e9f;
+                margin-left: 10px;
             }
         }
 
@@ -277,9 +282,13 @@ body {
                     margin-top: 1px;
                     padding-left: 30px;
                     background: #97d5d4;
-                    width: 238px;
+                    width: 220px;
                     height: 28px;
                     
+                    &:hover {
+                        background: #00ada9;
+                    }
+
                     a {
                         color: #FFF;
                         font-size: pem(12);
