On place une marge sur le cadre du texte.

--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -150,6 +150,8 @@ body {
                 width: 680px;
                 border-top: 2px solid #9c9e9f;
                 margin-left: 10px;
+                
+                padding: 30px;
             }
         }
 
