--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -152,6 +152,10 @@ body {
                 margin-left: 10px;
                 
                 padding: 30px;
+                
+                ul {
+                    list-style-position: inside;
+                }
             }
         }
 
