--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -10,6 +10,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     line-height: normal;
     font-weight: normal;
     margin:0;
+    text-transform: uppercase;
 }
 
 body {
