Ul / Ol même combat.

--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -154,7 +154,7 @@ body {
                 
                 padding: 30px;
                 
-                ul {
+                ul, ol {
                     list-style-position: inside;
                 }
             }
