On place le bouton facebook

--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -104,6 +104,12 @@ img, object, embed {
                 }
             }
         }
+
+        .facebook {
+            position: absolute;
+            top: 20px;
+            right: -35px;
+        }
     }
 
     #info_site {
