Par défaut le texte est aligné sur la gauche...

--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -15,6 +15,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 body {
     background: #f8f0d1 url(images/main.png) no-repeat top center;
+    text-align: left;
 }
 
 // On va créer tout un jeu de couleur pour le menu
