--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -174,6 +174,22 @@ img, object, embed {
                     list-style-position: inside;
                 }
             }
+
+            .container-recherche {
+                background: #FFF;
+                padding: 20px;
+                overflow-y: scroll;
+                
+                h3 {
+                    width: 100%;
+                    height: 35px;
+                    background: #00a272;
+                    font-weight: bold;
+                    font-size: pem(16);
+                    color: #FFF;
+                    padding-left: 28px;
+                }
+            }
         }
 
         #sidebar {
