--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -176,18 +176,75 @@ img, object, embed {
             }
 
             .container-recherche {
+                width: 600px;
+                height: 654px;
                 background: #FFF;
                 padding: 20px;
                 overflow-y: scroll;
                 
+                
+                h2 {
+                    background: url(images/bg_commune.png) no-repeat center;
+                    text-align: center;
+                    color: #FFF;
+                    font-weight: bold;
+                    font-size: pem(15);
+                    width: 560px;
+                    height: 42px;
+                    margin-bottom: 10px;
+                    
+                    span {
+                        display: table-cell;
+                        vertical-align: middle;
+                        width: 560px;
+                        height: 42px;
+                    }
+                }
+
                 h3 {
-                    width: 100%;
-                    height: 35px;
+                    width: 560px;
                     background: #00a272;
                     font-weight: bold;
                     font-size: pem(16);
                     color: #FFF;
                     padding-left: 28px;
+                    
+                    span {
+                        width: 560px;
+                        height: 35px;
+                        display: table-cell;
+                        vertical-align: middle;
+                    }
+                }
+                .cadre-recherche {
+                    background: #f8f0d1;
+                    border-top: 2px solid #d7ccbf;
+                    border-bottom: 2px solid #d7ccbf;
+                    padding-left: 17px;
+                    padding-bottom: 10px;
+                    margin-left: 10px;
+                    margin-right: 10px;
+                    margin-bottom: 10px;
+
+                    ul, ol {
+                        list-style: none;
+                        
+                        li.bold {
+                            font-weight: bold;
+                        }
+                    }
+
+                    a.plus_detail {
+                        display: block;
+                        text-align: right;
+                        margin-right: 10px;
+                        color: #000;
+                        font-size: pem(12);
+                    }
+
+                    img.plus_detail {
+                        margin-right: 3px;
+                    }
                 }
             }
         }
