--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -72,7 +72,7 @@ img, object, embed {
         height: 180px;
 
         .header_bg {
-            background: transparent url(images/header.png) no-repeat center;
+            // background: transparent url(images/header.png) no-repeat center;
             width: 773px;
             height: 180px;
             position: relative;
