On place une variable qui signale le retour a la recherche et les liens qui vont avec. On crée aussi une fonction pour récupérer facilement le contexte du formulaire de recherche.

--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -190,6 +190,10 @@ img, object, embed {
                     list-style: none;
                     li {
                         display: inline-block;
+                        
+                        &.retour_recherche {
+                            float: right;
+                        }
                     }
                 }
             }
