Faute de frappe corrigée

--- a/squelettes/_form.scss
+++ b/squelettes/_form.scss
@@ -106,7 +106,7 @@
             width: 47%;
         }
 
-        .li.search-field {
+        li.search-field {
             clear: none;
         }
 
