--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -18,6 +18,11 @@ body {
     text-align: left;
 }
 
+// Classe général pour mettre en bold.
+.bold {
+    font-weight: bold;
+}
+
 // On va créer tout un jeu de couleur pour le menu
 .vert {
     background: #adb451;
@@ -353,10 +358,6 @@ img, object, embed {
 
                     ul, ol {
                         list-style: none;
-                        
-                        li.bold {
-                            font-weight: bold;
-                        }
                     }
 
                     a.plus_detail {
@@ -600,6 +601,13 @@ img, object, embed {
                     
                     ul, ol {
                         list-style: none;
+                        
+                        li.site_internet {
+                            a {
+                                background: #f7eecc;
+                                color: #000000;
+                            }
+                        }
                     }
 
                     table.spip {
