Couleur de fond pour la partie age/prix du détail.

--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -608,6 +608,12 @@ img, object, embed {
                                 color: #000000;
                             }
                         }
+
+                        li.age {
+                            span {
+                                background: #f7eecc;
+                            }
+                        }
                     }
 
                     table.spip {
