une class tri pour chaque onglet.

--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -270,7 +270,7 @@ img, object, embed {
                             color: #000;
                         }
 
-                        &.tri_commune {
+                        &.tri {
                             background: #FFF;
                         }
 
